settings and fixing collapse height comportment

--- a/src/sass/components/collapse.scss
+++ b/src/sass/components/collapse.scss
@@ -32,7 +32,7 @@
   }
 
   &_content {
-    height: 0;
+    height:0;
     overflow: hidden;
     background-color: #f6f6f6;
     border-radius: 5px;
@@ -53,8 +53,7 @@
     }
 
     &.isOpen {
-      height: 100%;
-      max-height: 166px;
+      height:166px;
     }
   }
 }
