--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -160,8 +160,7 @@ footer p {
   margin: 20px;
 }
 .collapse_content.isOpen {
-  height: 100%;
-  max-height: 166px;
+  height: 166px;
 }
 
 .carrousel {
